--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
     "vue": "^2.5.11",
-    "vue-resource": "^1.0.3"
+    "vue-resource": "^1.0.3",
+    "vue-router": "^2.1.1"
   },
   "browserslist": [
     "> 1%",
